funcinalidade de WhatsApp

--- a/index.html
+++ b/index.html
@@ -124,9 +124,7 @@
                         Com sessão para contato, localização e fotos.<br>
                         Imagens meranente ilustrativas. </p><br>
                         <button> Acessar </button>
-
                 </div>
-                
             </div>
         </div>
     </section>
@@ -137,8 +135,12 @@
             <h1> Contato </h1>
         </div><br>
         <div class="container-contatos">
-            <img class="icones-contato" src="./imagens/whatsapp (3).png" alt="">
-            <img class="icones-contato" src="./imagens/e-mail.png" alt="">
+            <a href="https://wa.me/5511918267390?text=Ol%C3%A1%2C%20me%20interessei%20pelos%20seus%20servi%C3%A7os.%20Gostaria%20de%20saber%20sobre%3F">
+                <img class="icones-contato" src="./imagens/whatsapp (3).png" alt="">
+            </a>
+            <a href="mailto:devnathan2025@gmail.com?subject=Informações%20sobre%20os%20servi%C3%A7os&body=Ol%C3%A1%2C%20me%20interessei%20pelos%20seus%20servi%C3%A7os.%20Gostaria%20de%20saber%20mais%3F">
+                <img class="icones-contato" src="./imagens/e-mail.png" alt="">
+            </a>
             <img class="icones-contato" src="./imagens/gmail.png" alt="">
         </div>
     </section>
