Correção no CSS da página

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/scrollreveal"></script>
+    <link rel="shortcut icon" href="./imagens/perfil_img.jpg" type="image/x-icon">
     <link rel="stylesheet" href="css/styleGlobal.css">
     <link rel="stylesheet" href="css/styleMobile.css">
     <link rel="shortcut icon" href="imagens/perfil.jpg" type="image/x-icon">
@@ -15,13 +16,13 @@
         <img src="./imagens/logo-banner.png" alt="" class="header-logotipo">
         <nav>
             <ul>
-                <li> <a href="#principal" class="header-links">  Principal</a></li>
-                <li> <a href="#sobre" class="header-links">      Sobre    </a></li>
-                <li> <a href="#projetos" class="header-links">   Projetos </a></li>
-                <li> <a href="#contato" class="header-links">    Contato  </a></li>
-                <img src="./imagens/menu-aberto.png" alt="" class="menu-mobile" height="30px" 
-                onclick="abrirMenuMobile()" class="resume-reveal">
-            </ul>
+                <li> <a href="#principal" class="header-links"> Principal</a></li>
+                <li> <a href="#sobre" class="header-links"> Sobre </a></li>
+                <li> <a href="#projetos" class="header-links"> Projetos </a></li>
+                <li> <a href="#contato" class="header-links"> Contato </a></li>
+                <img src="./imagens/menu-aberto.png" alt="" class="menu-mobile" height="30px" onclick="abrirMenuMobile()"
+                    class="resume-reveal">
+            <ul>
         </nav>
     </header>
     <a href="https://wa.me/5511918267390?text=Ol%C3%A1%2C%20me%20interessei%20pelos%20seus%20servi%C3%A7os.%20Gostaria%20de%20saber%20sobre%3F">
@@ -148,6 +149,31 @@
                 <img class="icones-contato" src="./imagens/e-mail.png" alt="">
             </a>
             <img class="icones-contato" src="./imagens/gmail.png" alt="">
+        </div>
+    </section>
+
+    <section>
+        <div class="line"></div>
+    <div>
+        <h1> Formulário </h1>
+    </div><br>
+
+        <div class="container-form">
+            <div class="form">
+                <form>
+                    <div class="campos">
+                        <label> Nome: </label>
+                        <input type="text" placeholder="Digite o seu nome...">
+                    </div>
+    
+                    <div class="campos">
+                        <label> E-mail: </label>
+                        <input type="email" placeholder="Digite o seu e-mail...">
+                    </div>
+    
+                    <textarea name="" id=""></textarea>
+                </form>
+            </div>
         </div>
     </section>
 
